--- a/_posts/2019-12-29-the-us-narrative-today.html
+++ b/_posts/2019-12-29-the-us-narrative-today.html
@@ -1558,107 +1558,107 @@ stories:
   domain: http://www.globegazette.com/
   link: https://globegazette.com/sports/football/professional/ron-rivera-to-meet-with-redskins-about-coaching-vacancy/image_416e28a0-eecd-55af-86d6-bb2d9bb9458c.html
 images:
-- name: blossombar-blue-granite-file-00-00-24-99.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-blue-granite-file-00-00-24-99.jpg
-- name: subway-subway-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-post-modern.jpg
-- name: fence-fence-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-plentiful.jpg
-- name: old-door-lock-old-door-lock-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-copper-circuit-2.jpg
-- name: oldtrain-oldtrain-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-gred-mash.jpg
-- name: containership-containership-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-kand-two.jpg
-- name: white-house-lawn-white-house-lawn-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-satan-red.jpg
-- name: old-gas-pumps-oldgaspumps-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-really-hot.jpg
-- name: bf-skinner-early-computer-bletchley.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-early-computer-bletchley.jpg
-- name: oldtrain-oldtrain-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-ww2-dresden.jpg
-- name: paris-paris-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-sunday.jpg
-- name: san-francisco-street-view-san-francisco-street-view-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-creativity.jpg
-- name: downtheline-downtheline-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-post-modern.jpg
-- name: crow-crow-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-ww2-color.jpg
-- name: old-church-oldchurch-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-green-zuma.jpg
-- name: nazi-invasion-bletchley-computer-racks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-bletchley-computer-racks.jpg
-- name: school-clouds-church-clouds-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-spagetti-accident.jpg
-- name: old-barn-old-barn-1500-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-crafty-painting.jpg
-- name: lincoln-memorial-lincolnmemorial-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-constitution.jpg
-- name: ellis-island-ellis-island-room-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-blue-electricity.jpg
-- name: border-crossing-bordercrossing-green-zuma.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-green-zuma.png
-- name: crypto-machine-bletchley-crypto-machine-bletchley-purple-pond.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-purple-pond.png
-- name: white-house-lawn-white-house-lawn-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-atari-missle.jpg
-- name: birdhouse-birdhouse-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-colorful-blocks.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-dark-dali.jpg
-- name: curtain-curtain-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-post-modern.jpg
-- name: paris-paris-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-smooth-ride.jpg
-- name: locked-up-steam-lock-up-steam-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-spagetti-accident.jpg
-- name: hollywood-building-hollywood-building-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-wols.jpg
-- name: braceros-domingo-ulloa-highway-granary-truck_36557728122_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-highway-granary-truck_36557728122_o.jpg
-- name: oldsmallboat-oldsmallboat-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-blue-electricity.jpg
-- name: stories-containership-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-containership-deep-connections.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-light-dali.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-light-dali.JPG
-- name: fence-mexico-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-crabapple.jpg
-- name: stalin-time-electric-tower-sun-behind.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-electric-tower-sun-behind.jpg
-- name: dc-statue-dcstatue-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-kandinsky-bv.jpg
-- name: mosaic-face-mosaic-face-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-propaganda-leaflets.jpg
-- name: art-museum-art-museum-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-bright-sand.jpg
-- name: blossombar-creativity-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-creativity-file-00-00-50-62.jpg
-- name: window-window.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window.jpg
-- name: downtown-trucksilo-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-yellow-collage.jpg
-- name: gears-4882162452-fa3126b38d-b-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-dry-skin.jpg
-- name: berlinwall-DSC-0084-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-spagetti-accident.jpg
-- name: nazi-invasion-girl-reading-garden-flowers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-girl-reading-garden-flowers.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-circuit-4.jpg
-- name: braceros-domingo-ulloa-seattle-shipping-people-walking.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-seattle-shipping-people-walking.jpg
-- name: oldhouse-granaryfield-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-matrix.jpg
-- name: lincoln-memorial-lincolnmemorial-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-attack-planes.jpg
-- name: oldroad-old-road-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-wols.jpg
-- name: old-cabin-oldcabin-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-blue-circuit.jpg
-- name: razorwire-DSC-0080-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-dali-two.jpg
+- name: subway-subway-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-gan-vogh.jpg
+- name: art-museum-art-museum-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-colored-circuits.jpg
+- name: containership-containership-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-pablo-blue.jpg
+- name: blossombar-gan-vogh-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-gan-vogh-file-00-00-00-00.jpg
+- name: aws-s3-stories-35910978054-906047b6cb-z.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-35910978054-906047b6cb-z.jpg
+- name: sand-hand-sand-hand-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-atari-missle.jpg
+- name: carry-load-carryload-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-rainbow-festival.jpg
+- name: border-crossing-bordercrossing-satan-red.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-satan-red.png
+- name: dragon-desert-desert-dragon-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-post-modern.jpg
+- name: braceros-domingo-ulloa-palace-water-fountain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-palace-water-fountain.jpg
+- name: adam-smith-adam-smith-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-yellow-paper.jpg
+- name: mistywoods-babyfoot-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-smooth-ride.jpg
+- name: walled-garden-walled-garden-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-satan-red.jpg
+- name: white-house-whitehouse-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-satan-red.jpg
+- name: border-fence-border-fence-on-hill-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-bright-sand.jpg
+- name: nazi-invasion-times-square-up-road.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-times-square-up-road.jpg
+- name: store-on-corner-store-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-crafty-painting.jpg
+- name: statue-of-liberty-front-view-statueofliberty-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-rainbow-festival.jpg
+- name: birdhouse-birdhouse-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-ww2-dresden.jpg
+- name: cargo-ship-cargo-ship-on-sea-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-spagetti-accident.jpg
+- name: braceros-domingo-ulloa-bridge-over-columbia.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-bridge-over-columbia.jpg
+- name: sand-hand-sand-hand-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-clean-view.jpg
+- name: power-lines-power-lines-empty-space-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-emily-carr.jpg
+- name: mistywoods-babyfoot-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-smoking-cigarette.jpg
+- name: bf-skinner-subway-underground_36599191851_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-subway-underground_36599191851_o.jpg
+- name: docks-docks-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-gred-mash.jpg
+- name: death-valley-death-valley-national-park-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-green-zuma.jpg
+- name: stalin-time-concert-hall-bright-lights.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-concert-hall-bright-lights.jpg
+- name: oldroad-old-road-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-cinnamon-rolls.jpg
+- name: nyc-flag-nycflag-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-space-pizza.jpg
+- name: old-church-oldchurch-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-bright-sand.jpg
+- name: power-lines-power-lines-empty-space-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-copper-circuit-2.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-dry-skin.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-dry-skin.JPG
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-satan-red.jpg
+- name: gypsy-wagon-gypsywagon-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-blue-granite.jpg
+- name: bf-skinner-surveillance-3-camers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-surveillance-3-camers.jpg
+- name: wreck-IMG_7054.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wreck-IMG_7054.jpg
+- name: trucksilo-trucksilo-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-monet-one.jpg
+- name: old-barn-old-barn-1500-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-dark-dali.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-blue-brush.jpg
+- name: wind-mills-windmills-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-gred-mash.jpg
+- name: hollywood-building-hollywood-building-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-copper-circuit-2.jpg
+- name: sand-hand-sand-hand-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-far-away.jpg
+- name: mistywoods-babyfoot-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-satan-red.jpg
+- name: windowmountain-window-mountain-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-green-zuma.jpg
+- name: status-berlin-status-berlin-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-ww2-dresden.jpg
+- name: border-crossing-bordercrossing-dry-skin.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-dry-skin.png
+- name: locked-up-steam-lock-up-steam-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-cinnamon-rolls.jpg
+- name: aws-s3-stories-new-oldbarn-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-oldbarn-dark-dali.jpg
+- name: school-clouds-church-clouds-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-sunday.jpg
+- name: crow_dali_two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_dali_two.jpg
 ---
 Students Volunteer At Animal Shelter.&nbsp;Words Of Wisdom From The First President.&nbsp;Heard It On The Streets.&nbsp;Reasons Why Sports Betting Is Harder Than You Think.&nbsp;Maricopa County Board Of Supervisors Upholds Paul Petersen's Suspension.&nbsp;Earthquakes, Aviation And An Apprehended Escapee Led October News.&nbsp;Jewish Leaders Urge Action After Another 'senseless' Attack.&nbsp;Dispute Over Health Payments Defused, Spending Bill On Track.&nbsp;
